--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-slider": "^0.6.1",
     "react-sortablejs": "^1.0.0",
     "reactify": "^1.1.1",
+    "rest": "^2.0.0",
     "sortablejs": "^1.4.2",
     "togeojson": "^0.13.0",
     "wellknown": "^0.4.2"
