--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "leaflet.heat": "git+https://github.com/DuGuille/Leaflet.heat.git#relative-heatmap",
     "mobx": "^2.3.4",
     "mobx-react": "^3.4.0",
-    "osmtogeojson": "^2.2.11",
+    "osmtogeojson": "^2.2.12",
     "papaparse": "^4.1.2",
     "proj4": "^2.3.14",
     "react": "^0.14.8",
@@ -38,6 +38,7 @@
     "wellknown": "^0.4.2"
   },
   "devDependencies": {
+    "json-loader": "^0.5.4",
     "mobx-react-devtools": "^4.2.2",
     "typescript": "^1.8.10",
     "typings": "^1.3.2",
