added base for shapefile support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
 "typings/index.d.ts",
 "typings-custom/leaflet.heat.d.ts",
 "typings-custom/leaflet.ExtraMarkers.d.ts",
+"typings-custom/leaflet.shapefile.d.ts",
 "app/ui_components/common_items/commonInterfaces.ts",
 "app/ui_components/Map.tsx",
 "app/ui_components/Stores/States.ts"
