Initial function for symbol clurstering

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "d3": "^3.5.17",
     "dom-to-image": "^2.4.0",
     "impromptu-react-sidemenu": "^0.1.1",
+    "leaflet": "^1.0.0-rc.3",
     "leaflet-fullscreen": "^1.0.1",
     "leaflet.heat": "git+https://github.com/DuGuille/Leaflet.heat.git#relative-heatmap",
+    "leaflet.markercluster": "^1.0.0-rc.1.0",
     "mobx": "^2.3.4",
     "mobx-react": "^3.4.0",
     "osmtogeojson": "^2.2.12",
