--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,9 +24,9 @@
 "typings-custom/leaflet.ExtraMarkers.d.ts",
 "typings-custom/leaflet.shapefile.d.ts",
 "typings-custom/leaflet-markercluster.d.ts",
-"app/ui_components/common_items/commonInterfaces.ts",
+"app/common_items/commonInterfaces.ts",
 "app/ui_components/Map.tsx",
-"app/ui_components/Stores/States.ts"
+"app/stores/States.ts"
 ],
     "compileOnSave": true,
     "buildOnSave": false,
