--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "sortablejs": "^1.4.2",
     "spinkit": "^1.2.5",
     "togeojson": "^0.13.0",
-    "wellknown": "^0.4.2"
+    "wellknown": "^0.4.2",
+    "xlsx": "^0.8.0"
   },
   "devDependencies": {
     "json-loader": "^0.5.4",
