Move to Leaflet 1.0 release, including updated typings Cleaned up saved files Allow setting colors by string values Performance boost to calculating unique values for layers Fixed Chrome bug where legend text editor wouldn't activate until right-clicked

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "d3": "^3.5.17",
     "dom-to-image": "^2.4.0",
     "impromptu-react-sidemenu": "^0.1.1",
-    "leaflet": "^1.0.0-rc.3",
+    "leaflet": "^1.0.0",
     "leaflet-fullscreen": "^1.0.1",
     "leaflet.heat": "git+https://github.com/DuGuille/Leaflet.heat.git#relative-heatmap",
     "leaflet.markercluster": "^1.0.0-rc.1.0",
