--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,14 @@
         "jsx": "react",
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "declaration": false,
+        "declaration": true,
         "noImplicitAny": false,
         "noImplicitUseStrict": false,
         "removeComments": true,
         "noLib": false,
         "preserveConstEnums": true,
-        "suppressImplicitAnyIndexErrors": true
+        "suppressImplicitAnyIndexErrors": true,
+        "outDir": "dist"
     },
     "exclude": [
         "node_modules"
@@ -27,7 +28,8 @@
 "app/MakeMaps.tsx",
 "app/View.tsx",
 "app/stores/States.ts",
-"app/stores/Main.ts"
+"app/stores/Main.ts",
+"app/index.ts"
 ],
     "compileOnSave": true,
     "buildOnSave": false,
