--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "makeMaps",
   "version": "1.0.0",
   "main": "./dist/index.js",
-  "typings": "./dist/index",
+  "types": "./dist/index",
   "scripts": {
     "prepublish": "typings install && tsc && webpack"
   },
