--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "makeMaps",
-  "repository" : "https://github.com/simopaasisalo/MakeMaps",
+  "repository": "https://github.com/simopaasisalo/MakeMaps",
   "description": "A simple, integrable map editor built on Leaflet",
-  "bugs":{
-    "url":"https://github.com/simopaasisalo/MakeMaps/issues"
+  "bugs": {
+    "url": "https://github.com/simopaasisalo/MakeMaps/issues"
   },
   "version": "0.8.0",
   "main": "./dist/MakeMaps.js",
   "typings": "./dist/MakeMaps",
   "scripts": {
-	"prepublish": "typings install && tsc && webpack"
+    "prepublish": "typings install && tsc && webpack"
   },
   "author": "Simo Paasisalo",
   "license": "GPL-3.0",
@@ -45,22 +45,26 @@
     "xlsx": "^0.8.0"
   },
   "devDependencies": {
+    "css-loader": "^0.26.0",
+    "file-loader": "^0.9.0",
     "json-loader": "^0.5.4",
+    "style-loader": "^0.13.1",
     "typescript": "^2.0.3",
     "typings": "^1.3.2",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.0"
   },
   "files": [
-	"dist",
-	"external_js",
-	"app/styles"
+    "dist",
+    "external_js",
+    "styles",
+    "images"
   ],
-  "keywords":[
-  "map",
-  "react",
-  "leaflet",
-  "typescript",
-  "mobx"
+  "keywords": [
+    "map",
+    "react",
+    "leaflet",
+    "typescript",
+    "mobx"
   ]
-
 }
