Fixed npm dependencies of react-sortablejs

--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "react-modal": "^1.5.2",
     "react-select": "^1.0.0-beta12",
     "react-slider": "^0.7.0",
-    "react-sortablejs": "^1.0.0",
-    "sortablejs": "^1.4.2",
+    "react-sortablejs": "^1.2.0",
+    "sortablejs": "^1.5.0-rc1",
     "spinkit": "^1.2.5",
     "togeojson": "^0.14.2",
     "wellknown": "^0.5.0",
