--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
   },
   "devDependencies": {
     "css-loader": "^0.26.0",
+    "expect": "^1.20.2",
     "file-loader": "^0.9.0",
     "json-loader": "^0.5.4",
+    "selenium-webdriver": "^3.1.0",
     "style-loader": "^0.13.1",
     "tslint": "^4.0.2",
     "typescript": "^2.0.3",
