--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "main": "./dist/MakeMaps.js",
   "typings": "./dist/MakeMaps",
   "scripts": {
-    "prepublish": "typings install && tslint app/*.ts* && tslint app/**/*.ts* && tsc && webpack"
+    "prepublish": "typings install && tslint app/*.ts* && tslint app/**/*.ts* && tsc && webpack",
+    "test": "tsc && mocha dist/test"
   },
   "author": "Simo Paasisalo",
   "license": "GPL-3.0",
@@ -45,10 +46,12 @@
     "xlsx": "^0.8.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "css-loader": "^0.26.0",
     "expect": "^1.20.2",
     "file-loader": "^0.9.0",
     "json-loader": "^0.5.4",
+    "mocha": "^3.2.0",
     "selenium-webdriver": "^3.1.0",
     "style-loader": "^0.13.1",
     "tslint": "^4.0.2",
