--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,8 @@ addons:
 node_js:
  - "6.9.0"
  - "7.6.0"
+before_install:
+  - wget https://github.com/mozilla/geckodriver/releases/download/v0.14.0/geckodriver-v0.14.0-linux64.tar.gz
+  - mkdir geckodriver
+  - tar -xzf geckodriver-v0.14.0-linux64.tar.gz -C geckodriver
+  - export PATH=$PATH:$PWD/geckodriver
