--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
 language: node_js
+env:
+  - CXX=g++-4.8
 addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
   firefox: "latest"
 node_js:
- - "6.9.0"
- - "7.6.0"
+ - "6"
+ - "7"
 before_install:
   - wget https://github.com/mozilla/geckodriver/releases/download/v0.13.0/geckodriver-v0.13.0-linux64.tar.gz
   - mkdir geckodriver
