--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "css-loader": "^0.26.0",
     "file-loader": "^0.9.0",
+    "geckodriver": "^1.4.0",
     "json-loader": "^0.5.4",
     "mocha": "^3.2.0",
     "selenium-webdriver": "^3.3.0",
