--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,12 @@ language: node_js
 env:
   - CXX=g++-5
 addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - g++-5
-    firefox: "51.0.1"
+  firefox: "51.0.1"
+
 node_js:
  - "7.6.0"
+
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+- sleep 3 # give xvfb some time to start
